<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/name_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/name"
        android:inputType="text"
        android:shadowColor="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/address_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:shadowColor="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_reg"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/phone_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/phone"
        android:inputType="phone"
        android:shadowColor="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_reg" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/email_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:shadowColor="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_reg"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/password_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:shadowColor="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_reg" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/password_confirm_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/password_conf"
        android:inputType="textPassword"
        android:shadowColor="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_reg" />

    <Button
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimary"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/register_user"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_reg" />
</android.support.constraint.ConstraintLayout>